--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/shadowfool/Friends-Graph#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
     "express": "^4.14.0",
+    "fetch": "^1.1.0",
     "lodash": "^4.13.1",
     "neo4j": "^2.0.0-RC2",
     "request": "^2.72.0"
