Completed docker yml for node server and neo4j.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
 
   neo4j: 
     image: neo4j
+    environment:
+      NEO4J_AUTH: neo4j/1234
     networks:
       - nodeapp-network
     ports: 
